--- a/src/componentes/ItemListContainer/ItemListContainer.css
+++ b/src/componentes/ItemListContainer/ItemListContainer.css
@@ -2,3 +2,23 @@
     height: calc(100% - 40px);
     width: 100%;
 }
+
+.menuContainer {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    height: 40px;
+    width: 100%;
+    margin: 10px 0 10px 50px;
+}
+
+.titleContainer {
+    font-size: 25px;
+    width: 100%;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 500;
+    box-sizing: border-box;
+}
