--- a/src/componentes/NavBar/NavBar.css
+++ b/src/componentes/NavBar/NavBar.css
@@ -22,3 +22,9 @@
     align-items: center;
     justify-content: center;
 }
+
+@media screen and (max-width: 550px){
+    .logo {
+        margin-left: 30px;
+    }
+}
